--- a/render.yml
+++ b/render.yml
@@ -1,7 +1,7 @@
+version: 1
 services:
   - type: web
-    name: bookstore-service
+    name: my-spring-boot-app
     env: java
-    buildCommand: "./mvnw clean install"
-    startCommand: "java -jar target/BookStoreTest-0.0.1-SNAPSHOT.jar"
-    plan: free
+    buildCommand: ./mvnw clean install
+    runtime: java17
