--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BookStore
-spring.datasource.url=jdbc:mysql://1.47.130.63:3306/bookdb
+spring.datasource.url=jdbc:mysql://localhost:3306/bookdb
 spring.datasource.username=bookstore
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
